Adding checks for uppercase tables and databases